# python-project-83

./: .gitignore  Makefile  README.md  database.sql  pyproject.toml  requirements.txt
.github/workflows/: mail.yml  main.yml
page_analyzer/: app.py  db.py  parser.py  repository.py  utils.py
page_analyzer/templates/: all_urls.html  index.html  layout.html  one_url.html
