[project]
name = "hexlet-code"
version = "0.1.0"
description = "Page analalyzer web"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "black>=24.10.0",
    "flake8>=7.1.1",
    "flask>=3.1.0",
    "gunicorn",
    "lxml>=5.3.0",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "validators>=0.34.0",
]

